--- a/public/themes/katniss/css/style.custom.css
+++ b/public/themes/katniss/css/style.custom.css
@@ -1,3 +1,21 @@
+/* custom template admin */
+*{-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
+.logopanel{text-align: center;}
+.showmenu{background-image: none; font-size: 20px; padding: 7px 10px; color: #fff; text-align: center;}
+.notification .dropdown-toggle .caret{color: #fff; border-top-color: #fff;}
+.userinfo .dropdown-toggle{color: #fff;}
+.showmenu:focus, .notification .dropdown-toggle:focus, .userinfo .dropdown-toggle:focus, .showmenu:hover, .notification .dropdown-toggle:hover, .userinfo .dropdown-toggle:hover{text-decoration: none; color: #fff; opacity: 0.7}
+.headerright .dropdown{margin-left: 0px;}
+
+.searchwidget input.search-query{height: 36px;}
+
+.rightpanel{
+	transition: margin 0.05s;
+    -moz-transition: margin 0.05s;
+    -webkit-transition: margin 0.05s;
+    -o-transition: margin 0.05s;
+}
+
 /* Form auth ... */
 .logintitle span[class*=iconfa]{font-size: 48px; margin-top: 14px; float: left; margin-right: 10px;}
 .loginwrapper .control-group a, .loginwrapper .control-group label{color: #c1c0c0; font-size: 14px; min-height: auto;}
