--- a/public/themes/katniss/css/style.custom.css
+++ b/public/themes/katniss/css/style.custom.css
@@ -1,5 +1,7 @@
 /* custom template admin */
 *{-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{min-height: 30px;}
+.row-fluid [class*="span"]{min-height: auto;}
 .logopanel{text-align: center;}
 .showmenu{background-image: none; font-size: 20px; padding: 7px 10px; color: #fff; text-align: center;}
 .notification .dropdown-toggle .caret{color: #fff; border-top-color: #fff;}
@@ -24,12 +26,27 @@
     -o-transition: margin 0.05s;
 }
 
-.profilethumb{display: block; text-align: center;}
-.profilethumb img{margin: auto;}
+.profilethumb{display: block; text-align: center; margin-bottom: 5px;}
+.profilethumb img{margin: auto; max-width: 170px;}
 .fileupload .input-append{display: block; text-align: center;}
 .fileupload .input-append .btn, .fileupload .input-prepend .btn{padding-top: 4px; padding-bottom: 4px;}
 .uneditable-input.span12{width: calc(100% - 82px); min-height: 30px;}
 .fileupload-exists .uneditable-input.span12{width: calc(100% - 142px);}
+
+.ui-datepicker-header > .ui-datepicker-prev{top: 5px; height: 30px; background-position-y: -30px;}
+.ui-datepicker-header > .ui-datepicker-next{top: 5px; height: 30px; background-position-y: 10px;}
+.ui-datepicker-title{margin: auto; width: calc(100% - 30px)}
+.ui-datepicker-title:after{content: ''; display: table; clear: both;}
+.ui-datepicker-title select{width: calc(50% - 6px); margin: 0px 3px; display: block; float: left;}
+
+.editprofileform p{margin: 10px 0px;}
+.editprofileform label{width: 100%;}
+.contentinner .uniform-label{width: auto; display: inline-block; margin-left: 7px;}
+.contentinner .uniform-label:first-child{margin: 0px;}
+.editprofileform input[type="text"], .editprofileform input[type="email"], .editprofileform input[type="password"]{
+	-moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;
+	margin-bottom: 0; font-size: 12px; color: #000; background: #fcfcfc; min-height: 30px;
+}
 
 /* Form auth ... */
 .logintitle span[class*=iconfa]{font-size: 48px; margin-top: 14px; float: left; margin-right: 10px;}
