--- a/public/themes/katniss/css/style.custom.css
+++ b/public/themes/katniss/css/style.custom.css
@@ -3,7 +3,7 @@
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{min-height: 30px;}
 .row-fluid [class*="span"]{min-height: auto;}
 
-.hasDatepicker{cursor: pointer!important; background-color: #eee!important;}
+.hasDatepicker{cursor: pointer!important;}
 
 .icon-spin{-webkit-animation: icon-spin 2s infinite linear; animation: icon-spin 2s infinite linear;}
 
@@ -44,7 +44,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .profilethumb img{margin: auto; max-width: 170px;}
 .fileupload .input-append{text-align: center;}
 .fileupload .input-append .btn, .fileupload .input-prepend .btn{padding-top: 4px; padding-bottom: 4px;}
-.uneditable-input.span12{width: calc(100% - 82px); min-height: 30px;}
+.uneditable-input.span12{width: calc(100% - 82px); min-height: 30px; background: #fcfcfc;}
 .fileupload-exists .uneditable-input.span12{width: calc(100% - 142px);}
 
 .ui-datepicker-header > .ui-datepicker-prev{top: 5px; height: 30px; background-position-y: -30px;}
@@ -58,20 +58,24 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 
 .editprofileform p{margin: 10px 0px;}
 .editprofileform label{width: 100%;}
-.contentinner .uniform-label{width: auto; display: inline-block; margin-left: 7px;}
+.contentinner .uniform-label{width: auto; display: inline-block; margin-left: 20px; padding: 0px;}
+.contentinner .uniform-label .radio{margin: 0px;}
 .contentinner .uniform-label:first-child{margin: 0px;}
-.editprofileform input[type="text"], .editprofileform input[type="email"], .editprofileform input[type="password"]{
+.editprofileform input[type="text"], .editprofileform input[type="number"], .editprofileform input[type="email"], .editprofileform input[type="password"]{
 	-moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;
 	margin-bottom: 0; font-size: 12px; color: #000; background: #fcfcfc; min-height: 30px;
 }
+.editprofileform input[type="text"]:focus, .editprofileform input[type="email"]:focus, .editprofileform input[type="password"]:focus{background: #fff;}
 
 *[class^='span'].error input{
-	border-color: #b94a48; background: rgba(185, 74, 72, 0.2)!important;
+	border-color: #b94a48; background: rgba(253, 189, 188, 0.1);
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 }
 *[class^='span'].error .help-inline{color: #b94b49;}
+
+input[disabled],select[disabled],textarea[disabled],button[disabled]{cursor: auto!important}
 
 /* Form auth ... */
 .logintitle span[class*=iconfa]{font-size: 48px; margin-top: 14px; float: left; margin-right: 10px;}
