--- a/public/themes/katniss/css/style.custom.css
+++ b/public/themes/katniss/css/style.custom.css
@@ -7,6 +7,9 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .popover-title{font-weight: bold;}
 .popover-content{font-size: 13px!important;}
 
+.img-polaroid{max-width: 100%;}
+.info-photo{text-align: center; margin: 5px auto;}
+
 .hasDatepicker{cursor: pointer!important;}
 
 .icon-spin{-webkit-animation: icon-spin 2s infinite linear; animation: icon-spin 2s infinite linear;}
@@ -44,11 +47,15 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .input-append .btn-icon{width: 40px; text-align: center; padding: 4px 0px;}
 .input-append .btn-icon [class^='iconfa-']{font-size: 16px; display: inline-block; vertical-align: middle; line-height: 1.2}
 
+.row-fluid span[class*='span']{display: block; float: left;}
+
 .profilethumb{display: block; text-align: center; margin-bottom: 5px;}
 .profilethumb img{margin: auto; max-width: 170px;}
 .fileupload .input-append{text-align: center;}
 .fileupload .input-append .btn, .fileupload .input-prepend .btn{padding-top: 4px; padding-bottom: 4px;}
-.uneditable-input.span12{width: calc(100% - 82px); min-height: 30px; background: #fcfcfc; padding: 5px 0px;}
+.fileupload .uneditable-input[class*='span']{min-height: 30px; background: #fcfcfc; padding: 5px 10px; text-align: left;}
+.fileupload-new .uneditable-input.span12{width: calc(100% - 82px);}
+.fileupload-exists .uneditable-input.span12{width: calc(100% - 95px);}
 .error .uneditable-input{
 	border-color: #b94a48; border-right-width: 2px;
 	background: rgba(253, 189, 188, 0.1);
@@ -56,7 +63,6 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 }
-.fileupload-exists .uneditable-input.span12{width: calc(100% - 142px);}
 
 .ui-datepicker-header > .ui-datepicker-prev{top: 5px; height: 30px; background-position-y: -30px;}
 .ui-datepicker-header > .ui-datepicker-next{top: 5px; height: 30px; background-position-y: 10px;}
@@ -76,7 +82,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 	-moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px;
 	margin-bottom: 0; font-size: 12px; color: #000; background: #fcfcfc; min-height: 30px;
 }
-.editprofileform input[type="text"]:focus, .editprofileform input[type="email"]:focus, .editprofileform input[type="password"]:focus{background: #fff;}
+.editprofileform input[type="text"]:focus, .editprofileform input[type="email"]:focus, .editprofileform input[type="password"]:focus, .editprofileform input[type="number"]:focus{background: #fff;}
 
 *[class*='span'].error input{
 	border-color: #b94a48; background: rgba(253, 189, 188, 0.1);
