--- a/public/themes/katniss/css/style.default.css
+++ b/public/themes/katniss/css/style.default.css
@@ -858,8 +858,8 @@ ul.list-nostyle li span, ol.list-nostyle li span { vertical-align: top; }
 .profile-left .taglist li a span { position: absolute; top: 8px; right: 10px; opacity: 0.3; }
 
 .profilethumb { display: inline-block; position: relative; overflow: hidden; margin-bottom: 20px; }
-.profilethumb a { display: none; font-size: 11px; position: absolute; top: 5px; right: 5px; padding: 2px 7px; background: #333; color: #fff; }
-.profilethumb a:hover { text-decoration: none; background: #444; }
+.profilethumb a.chose-file { display: none; font-size: 11px; position: absolute; top: 5px; right: 5px; padding: 2px 7px; background: #333; color: #fff; }
+.profilethumb a.chose-file:hover { text-decoration: none; background: #444; }
 
 .editprofileform label { float: left; width: 100px; padding-top: 5px; }
 .editprofileform input[type=checkbox] { margin: 0; margin-right: 10px; vertical-align: middle; }
