--- a/public/themes/katniss/css/style.custom.css
+++ b/public/themes/katniss/css/style.custom.css
@@ -7,6 +7,11 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .popover-title{font-weight: bold;}
 .popover-content{font-size: 13px!important;}
 
+#popup_panel{padding: 10px;}
+.confirm #popup_panel:after{content: ''; display: table; clear: both;}
+.confirm #popup_panel input:first-child{float: left;}
+.confirm #popup_panel input:last-child{float: right;}
+
 .img-polaroid{max-width: 100%;}
 .info-photo{text-align: center; margin: 5px auto;}
 
@@ -18,6 +23,8 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .showmenu{background-image: none; font-size: 20px; padding: 7px 10px; color: #fff; text-align: center;}
 .notification .dropdown-toggle .caret{color: #fff; border-top-color: #fff; margin-top: 15px;}
 .userinfo .dropdown-toggle{color: #fff;}
+.userinfo .dropdown-menu li:first-child{text-align: center;}
+.userinfo .dropdown-menu input[type='image']{padding: 2px; border: 1px solid #ddd; border-radius: 100%; margin-bottom: 5px;}
 .showmenu:focus, .notification .dropdown-toggle:focus, .userinfo .dropdown-toggle:focus, .showmenu:hover, .notification .dropdown-toggle:hover, .userinfo .dropdown-toggle:hover{text-decoration: none; color: #fff; opacity: 0.7}
 .headerright .dropdown{margin-left: 0px;}
 .notification .dropdown-toggle:first-child{margin-right: 8px;}
