--- a/public/themes/katniss/css/style.custom.css
+++ b/public/themes/katniss/css/style.custom.css
@@ -2,6 +2,9 @@
 *{-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{min-height: 30px;}
 .row-fluid [class*="span"]{min-height: auto;}
+.stdform2 [class*="span"]{min-height: 30px;}
+.stdform2 span.field, .stdform2 div.field{padding: 5px 15px;}
+.stdform2 label{padding: 10px 0 0 15px;}
 
 .popover{font-family: 'Roboto', sans-serif;}
 .popover-title{font-weight: bold;}
@@ -107,6 +110,7 @@ input[disabled],select[disabled],textarea[disabled],button[disabled]{cursor: aut
 .loginwrapper .control-group:last-child{margin: 0px;}
 .loginwrapper .help-inline{display: block; margin-top: 2px; background: #fff;}
 .loginwrapper .help-inline a{color: #b94a48; font-size: 12px; text-decoration: underline;}
+.loginwrapper input{min-height: 44px;}
 .loginwrapper input#password-confirm{background: #eee url(../img/password.png) no-repeat 8px 12px}
 .loginwrapper input#name{background: #eee url(../img/glyphicons-info.png) no-repeat 8px 12px}
 .loginwrapper input#login{background: #eee url(../img/username.png) no-repeat 8px 12px}
@@ -162,6 +166,9 @@ div.jGrowl div.jGrowl-notification.info, div.jGrowl div.jGrowl-notification.aler
 .text-bottom .actionfull{margin-top: 10px;}
 .actionfull .btn{margin-right: 7px;}
 .actionfull .btn:last-child{margin-right: 0px;}
+.search-area{position: relative;}
+.search-area .iconfa-remove{position: absolute; right: 0px; bottom: 0px; cursor: pointer; padding: 4px 10px; display: inline-block;}
+.search-area .iconfa-remove:hover{color: #c9302c;}
 .table th, .table td{text-align: center;}
 .table .text-center, .table .text-center{text-align: center;}
 .table .text-left, .table .text-left{text-align: left;}
@@ -180,8 +187,41 @@ div.jGrowl div.jGrowl-notification.info, div.jGrowl div.jGrowl-notification.aler
 .table .btn-read:hover span{color: #00c0ef;}
 .table .btn-update:hover span{color: #ec971f;}
 .table .btn-delete:hover span{color: #c9302c;}
+
+.stdform2 .field:after{content: ''; clear: both; display: table;}
+.stdform2 .table-permission tbody tr:first-child td{
+    background: rgb(237,237,237); color: #000; font-weight: bold;
+    background: -moz-linear-gradient(top, rgba(237,237,237,1) 0%, rgba(222,222,222,1) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(237,237,237,1)), color-stop(100%,rgba(222,222,222,1)));
+    background: -webkit-linear-gradient(top, rgba(237,237,237,1) 0%,rgba(222,222,222,1) 100%);
+    background: -o-linear-gradient(top, rgba(237,237,237,1) 0%,rgba(222,222,222,1) 100%);
+    background: -ms-linear-gradient(top, rgba(237,237,237,1) 0%,rgba(222,222,222,1) 100%);
+    background: linear-gradient(to bottom, rgba(237,237,237,1) 0%,rgba(222,222,222,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', endColorstr='#dedede',GradientType=0 );
+}
+.stdform .field label{display: inline-block; margin-left: 20px; float: none;}
+.stdform .field label:first-child{padding: 0px; margin-left: 0px; float: none; width: auto; font-weight: normal;}
+.table-striped.table-permission tbody>tr:hover>td {background-color: #efefef;}
+.stdform2 .table-permission .info{background: #d9edf7;}
+.stdform2 .table-permission .default{background: #f3f3f3;}
+.stdform2 .table-permission .success{background: #dff0d8;}
+.stdform2 .table-permission .warning{background: #fcf8e3;}
+.stdform2 .table-permission .danger{background: #f2dede;}
+.stdform2 .table-permission tr:hover .info{background: #c4e3f3;}
+.stdform2 .table-permission tr:hover .default{background: #e6e5e5;}
+.stdform2 .table-permission tr:hover .success{background: #d0e9c6;}
+.stdform2 .table-permission tr:hover .warning{background: #faf2cc;}
+.stdform2 .table-permission tr:hover .danger{background: #ebcccc;}
+.stdform2 .table-permission label{width: auto; padding: 0px; float: none;}
+
 .pagination{margin: 0px 0px 0px 270px; line-height: 0;}
 .pagination ul > li > a, .pagination ul > li > span{padding: 2px 10px;}
+
+
+/* form */
+.widgetcontent .row-fluid [class*='span'] > label{padding-top: 8px; display: block;}
+.widgetcontent .row-fluid [class*='span'] > input, .widgetcontent .row-fluid [class*='span'] > textarea{min-height: 36px;}
+.stdform2 span.field textarea, .stdform2 div.field textarea{max-width: 100%;}
 
 .SumoSelect{display: block; width: 100%;}
 select.SumoSelect.SumoUnder{display: none;}
