--- a/public/themes/katniss/css/style.custom.css
+++ b/public/themes/katniss/css/style.custom.css
@@ -1,6 +1,7 @@
 /* custom template admin */
 *{-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{min-height: 30px;}
+input[disabled], select[disabled], textarea[disabled], input[readonly], select[readonly], textarea[readonly]{background-color: #fbfbfb}
 .row-fluid [class*="span"]{min-height: auto;}
 .stdform2 [class*="span"]{min-height: 30px;}
 .stdform2 span.field, .stdform2 div.field{padding: 10px 15px;}
@@ -67,19 +68,20 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .row-fluid span[class*='span']{display: block; float: left;}
 
 .profilethumb{display: block; text-align: center; margin-bottom: 5px;}
-.profilethumb img{margin: auto; max-width: 170px;}
+.profilethumb img{margin: 0px auto 10px; max-width: 230px;}
 .fileupload .input-append{text-align: center;}
 .fileupload .input-append .btn, .fileupload .input-prepend .btn{padding-top: 4px; padding-bottom: 4px;}
 .fileupload .uneditable-input[class*='span']{min-height: 30px; background: #fcfcfc; padding: 5px 10px; text-align: left;}
 .fileupload-new .uneditable-input.span12{width: calc(100% - 82px);}
 .fileupload-exists .uneditable-input.span12{width: calc(100% - 95px);}
-.error .uneditable-input{
+.fileupload.error .uneditable-input{
 	border-color: #b94a48; border-right-width: 2px;
 	background: rgba(253, 189, 188, 0.1);
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 }
+.fileupload.error small.help-inline{color: #595959}
 
 .ui-datepicker-header > .ui-datepicker-prev{top: 5px; height: 30px; background-position-y: -30px;}
 .ui-datepicker-header > .ui-datepicker-next{top: 5px; height: 30px; background-position-y: 10px;}
@@ -227,7 +229,7 @@ div.jGrowl div.jGrowl-notification.info, div.jGrowl div.jGrowl-notification.aler
 
 /* form */
 .widgetcontent .row-fluid [class*='span'] > label{padding-top: 8px; display: block;}
-.widgetcontent .row-fluid [class*='span'] > input, .widgetcontent .row-fluid [class*='span'] > textarea{min-height: 36px;}
+.widgetcontent .row-fluid [class*='span'] > input, .widgetcontent .row-fluid [class*='span'] > textarea{min-height: 30px;}
 .stdform2 span.field textarea, .stdform2 div.field textarea{max-width: 100%;}
 
 .SumoSelect{display: block; width: 100%;}
@@ -238,6 +240,7 @@ select.SumoSelect.SumoUnder{display: none;}
 .SumoSelect>.optWrapper>.options li.opt.selected {background-color: #f1f1f1;}
 .SumoSelect>.optWrapper>.options li.opt:hover {background-color: #E4E4E4; cursor: pointer;}
 .SumoSelect .select-all>span, .SumoSelect>.optWrapper.multiple>.options li.opt span.label{display: inline-block; position: static; width: auto; margin: 0px;}
+.SumoSelect.disabled>.CaptionCont{background-color: #fbfbfb;}
 
 .widgetphoto{text-align: center;}
 .widgetphoto .thumb{margin: 0px auto 7px; max-width: 100%;}
