--- a/public/themes/katniss/css/style.custom.css
+++ b/public/themes/katniss/css/style.custom.css
@@ -1,7 +1,7 @@
 /* custom template admin */
 *{-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{min-height: 30px;}
-input[disabled], select[disabled], textarea[disabled], input[readonly], select[readonly], textarea[readonly]{background-color: #f3f3f3}
+input[disabled], select[disabled], textarea[disabled], input[readonly], select[readonly], textarea[readonly]{background: #fff; border-color: #f3f3f3; box-shadow: none}
 .btn.disabled, .btn[disabled]{opacity: 0.5}
 .row-fluid [class*="span"]{min-height: auto;}
 .stdform2 [class*="span"]{min-height: 30px;}
